Fixed vertical scrollbar on short pages

--- a/src/assets/stylesheets/layout/_footer.scss
+++ b/src/assets/stylesheets/layout/_footer.scss
@@ -116,8 +116,6 @@
 
   // Set spacing
   &__inner {
-    // Hack: omit subpixel rounding issues when scaling up the base font
-    margin-bottom: -0.1rem;
     padding: 0.4rem;
     overflow: auto;
   }
